fixing transition issue of footer icons and fixing the dark mode button

--- a/styles/firstPage.css
+++ b/styles/firstPage.css
@@ -164,7 +164,7 @@ ul > li > a {
   background-color: #7487f0;
   width: 16px;
   height: 16px;
-  transform: translateX(18px);
+  transform: translateX(16px);
 }
 /* dark mode btn ends */
 .menu-btn {
